// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should render Text component 1`] = `
<Text
  allowFontScaling={false}
  style={
    {
      "color": "#999",
      "fontFamily": "NunitoSans_7pt-Medium",
      "fontSize": 14,
      "lineHeight": 20,
    }
  }
  suppressHighlighting={true}
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit.
</Text>
`;

exports[`Text should render Text component with prop error true 1`] = `
<Text
  allowFontScaling={false}
  style={
    {
      "color": "#eb5757",
      "fontFamily": "NunitoSans_7pt-Medium",
      "fontSize": 14,
      "lineHeight": 20,
    }
  }
  suppressHighlighting={true}
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit.
</Text>
`;

exports[`Text should render Text component with size large 1`] = `
<Text
  allowFontScaling={false}
  style={
    {
      "color": "#999",
      "fontFamily": "NunitoSans_7pt-Medium",
      "fontSize": 18,
      "lineHeight": 20,
    }
  }
  suppressHighlighting={true}
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit.
</Text>
`;
